Splitting  the tox.ini file in twain, to deal with the two dnspython libraries.

--- a/tox3.ini
+++ b/tox3.ini
@@ -3,7 +3,7 @@
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
 [tox]
-envlist = py27, pypy
+envlist = py33, py34
 
 [testenv]
 commands = python -munittest discover -s gs/dmarc/tests/
@@ -11,6 +11,6 @@ install_command =
   pip install --pre -f http://eggs.iopen.net/groupserver/base/ {opts} {packages}
 deps =
     setuptools
-    dnspython
+    dnspython3
     enum34
     mock
