--- a/tox.ini
+++ b/tox.ini
@@ -3,15 +3,21 @@
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
 [tox]
-envlist = py27, pypy
+envlist = py27, py33, py34, pypy
 
 [testenv]
 commands = python -munittest discover -s gs/dmarc/tests/
-install_command =
-  pip install --pre -f http://eggs.iopen.net/groupserver/base/ {opts} {packages}
 deps =
     setuptools
     dnspython
     enum34
+    mock
+    publicsuffix
+
+[testenv:py34]
+# No enum34
+deps =
+    setuptools
+    dnspython
     mock
     publicsuffix
