Testing with Python 3.5

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 # test suite on all supported python versions. To use it, "pip install tox"
 # and then run "tox" from this directory.
 [tox]
-envlist = py27, py33, py34, pypy
+envlist = py27, py33, py34, py35, pypy
 
 [testenv]
 commands = python -munittest discover -s gs/dmarc/tests/
@@ -15,6 +15,14 @@ deps =
     publicsuffix
 
 [testenv:py34]
+# No enum34
+deps =
+    setuptools
+    dnspython
+    mock
+    publicsuffix
+
+[testenv:py35]
 # No enum34
 deps =
     setuptools
